--- a/OnlineEdu.Business/OnlineEdu.Business.csproj
+++ b/OnlineEdu.Business/OnlineEdu.Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\OnlineEdu.DTO.csproj" />
     <ProjectReference Include="..\OnlineEdu.DataAccess\OnlineEdu.DataAccess.csproj" />
   </ItemGroup>
 
